Changes in version 0.11.1
  
  New features
    -switched to a circular design for the balance option in randCross and randCross2
    -added reduceGenome and doubleGenome for changing plody levels
    -added minSnpFreq to SimParam_addSnpChip for any reference population
    
  Bug fixes
    -fixed broken SimParam_addStructuredSnpChip
    -removed broken pullMultipleSnpGeno and pullMultipleSnpHaplo
    -fixed broken writePlink

Changes in version 0.11.0
  
  New features
    -$MAJOR CHANGE$ rework of setEBV (breaks some scripts)
    -genotype data now stored as bits (was bytes)
    -implemented a gamma model for crossover interference
    -added the mutate function to model random mutations
    -added a vignette explaining the biological model for traits
    -GS models now handle polyploids
    -heterogenous error variance is now optional in GS models (default is homogeneous error)
    -improved gene drop functionality of pedigreeCross
    -added keepParents option to makeDH and self (indirectly extends selectFam and selectWithinFam)
    -added RRBLUP_SCA2
    -set methods for the "show" function when applied to populations
    
  Bug fixes
    -fixed a bug returning the first individual when selecting 0
    -fixed error in recombination track when using makeDH
    -fixed error causing epistatic effects to mask GxE effects
    -fixed an error with pullSegSiteGeno and pullSegSiteHaplo with variable number of sites per chromosome

Changes in version 0.10.0
  
  New features
    -added traits with epistasis
    -Max number of threads automatically detected
    -added RRBLUP_D2
    -added version tracking to SimParam
    -removed trackHaploPop (superceded by pullIbdHaplo)
    -added fastRRBLUP
  
  Bug fixes
    -fixed faulty double crossover logic
    -fixed broken writePlink
    -fixed broken pullIbdHaplo
    -mergePops no longer assumes diploidy

Changes in version 0.9.0

  New features
    -added support for autopolyploids
    -added RRBLUP_GCA2