@@ -2,7 +2,7 @@ Package: AlphaSimR
 Type: Package
 Title: Breeding Program Simulations
 Version: 0.11.1
-Date: 2019-12-20
+Date: 2020-01-13
 Authors@R: c(person("Chris", "Gaynor", email = "gaynor.robert@hotmail.com",
   role = c("aut", "cre"), comment = c(ORCID = "0000-0003-0558-6656")),
   person("Gregor", "Gorjanc", role = "ctb", 
