@@ -12,6 +12,7 @@ export(RRBLUP_SCA2)
 export(SimParam)
 export(aa)
 export(bv)
+export(cChr)
 export(calcGCA)
 export(dd)
 export(doubleGenome)
