@@ -1,0 +1,25 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/Class-Pop.R
+\name{cChr}
+\alias{cChr}
+\title{Combine MapPop chromosomes}
+\usage{
+cChr(...)
+}
+\arguments{
+\item{...}{\code{\link{MapPop-class}} objects to be combined}
+}
+\value{
+Returns an object of \code{\link{MapPop-class}}
+}
+\description{
+Merges the chromosomes of multiple \code{\link{MapPop-class}} objects. 
+Each MapPop must have the same number of chromosomes
+}
+\examples{
+pop1 = quickHaplo(nInd=10, nChr=1, segSites=10)
+pop2 = quickHaplo(nInd=10, nChr=1, segSites=10)
+
+combinedPop = cChr(pop1, pop2)
+
+}
