@@ -4,6 +4,8 @@ Changes in version 0.11.1
     -switched to a circular design for the balance option in randCross and randCross2
     -added reduceGenome and doubleGenome for changing plody levels
     -added minSnpFreq to SimParam_addSnpChip for any reference population
+    -the `c` function now merges individuals for MapPop objects (was chromosomes before)
+    -the `cChr` function new merges chromosomes for MapPop objects 
     
   Bug fixes
     -fixed broken SimParam_addStructuredSnpChip
